--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,8 @@ services:
     name: album-player
     env: java
     plan: free
-    buildCommand: ./mvnw clean install -DskipTests
-    startCommand: java -jar target/album-player-0.0.1-SNAPSHOT.jar
+    buildCommand: "mvn clean install -DskipTests"
+    startCommand: "java -jar target/album-player-0.0.1-SNAPSHOT.jar"
     envVars:
-      - key: JAVA_VERSION
-        value: 17
-
+      - key: SPRING_PROFILES_ACTIVE
+        value: prod
