--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,7 @@
 services:
   - type: web
     name: album-player
-    env: java
+    env: docker
     plan: free
-    buildCommand: "mvn clean install -DskipTests"
-    startCommand: "java -jar target/album-player-0.0.1-SNAPSHOT.jar"
-    envVars:
-      - key: SPRING_PROFILES_ACTIVE
-        value: prod
+    dockerfilePath: ./Dockerfile
+
