Add Dockerfile and render.yaml for Render deploy

--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,6 @@ services:
     env: docker
     plan: free
     dockerfilePath: ./Dockerfile
-
+    envVars:
+      - key: SPRING_PROFILES_ACTIVE
+        value: prod
