--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- JWT (for Magic token verification) -->
+        <!-- JWT -->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
