Initial beta backup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,4 @@
-# Use in-memory H2 database
-spring.datasource.url=jdbc:h2:mem:albumdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
 
-# Auto-create and update tables from entities
-spring.jpa.hibernate.ddl-auto=update
-
-# Show SQL in logs (useful for debugging)
-spring.jpa.show-sql=true
-
-# Enable H2 console (browser access)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Server port
-server.port=8080
